Added the website dashbaord

--- a/projects.html
+++ b/projects.html
@@ -94,11 +94,16 @@
                     into how the web actually works!
                 </p>
             </li>
+            <li><p><b>Data Visualization Dashboard</b></p>
+                <p class="listP">Using a MEJN stack (I used vanilla JS instead of a framework) I collected user data and built a dashboard on their experience with the website, focusing on things like performance metrics. I then made it so you have
+                     to create an account and login to actually access said dashboard, learning about things like sessioning and authentification in the process.</p>
+            </li>
             <li><p><b>MineSweeper (<a href="https://github.com/Tyler-Culp/Mine-Sweeper">Link</a>)</b></p>
                 <p class="listP">A fun little pet project which recreates MineSweeper fully using java code. It allows you to play the game from within the computer's terminal.
                     Doesn't do too much other than that, but can be a fun little time killer.
                 </p>
             </li>
+            <li><p><b>Messenger chatbot (</b></p></li>
         </ol>
         <br>
     </main>
