changed profile picture

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                  attending C.K. McClatchy highschool where I played baseball and wrestled for all four years. Growing up in Sacramento I always enjoyed being outdoors, spending lots of my Summers at the river with friends. 
                  This has carried over to my time in San Diego as well with my trying to stop by the beach whenever I get the free time for it.</p>
                 <picture id="selfPicture">
-                    <source media="(min-width:100px)" srcset="dummyPicture-min.webp">
-                    <img src="puppy.png" alt="A picture of me" width="150" height="200">
+                    <img src="mainPicture.webp" alt="A picture of me">
                 </picture>
             </div>
             <br>
