Updated some pages

--- a/education.html
+++ b/education.html
@@ -27,7 +27,8 @@
         <div id="topGrid">
             <p id="firstP">My last three years have been spent pursuing a bachelor's of science degree in Mathematics-Computer Science at UC San Diego.
                  During my time at the school I have taken a variety of math and computer science classes, giving me a unique perspective on software engineering
-                 and contributing to my value as an employee.</p>
+                 and contributing to my value as an employee. Below is a sample of some of the important classes I've taken while at UCSD (during which time
+                 I managed to maintain a GPA of 3.85).</p>
             <div id="tableDiv">
             <table id="table">
                 <caption>Classes Taken</caption>
@@ -48,23 +49,23 @@
                     <td>Graph theory</td>
                 </tr>
                 <tr>
-                    <td>Computer Organization</td>
+                    <td>Operating Systems</td>
                     <td>Statistical Methods</td>
                 </tr>
                 <tr>
                     <td>Software Engineering</td>
                     <td>Abstract Algebra</td>
                 </tr>
+                <tr>
+                    <td>Web Dev (client / server)</td>
+                    <td>Linear Numeric Optimization</td>
+                </tr>
             </table>
 	</div>
         </div>
         <br>
-        <p id="secondP"> With the above table of classes being just a small example of all the classes I have taken so far. 
-            On top of that I have also managed to average above a 3.8 G.P.A between all of my classes, attaining Provost Honors every quarter, during my time at UC San Diego.
-        </p>
-        <br>
         <h3>Future Plans</h3>
-        <p id="thirdP"> After graduating in the Spring of 2023 I plan to then pursue a masters degree in Computer Science at UC Davis in the fall.
+        <p id="thirdP">I am no attending UC Davis where I am pursuing a masters degree in Computer Science after graduating from UC San Diego in June 2023.
         </p>
         <br>
     </main>
