--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <div class="aboutMe">
             <h2>About Me</h2>
             <div class="firstRow">
-                <p id="firstP" class="paragraphs">My name is Tyler and I am a third year at UC San Diego where I am pursuing a degree in Mathematics-Computer Science. I was born and raised in Sacramento, California,
+                <p id="firstP" class="paragraphs">My name is Tyler and I am a recent graduate from UC San Diego with a degree in Mathematics-Computer Science. I was born and raised in Sacramento, California,
                  attending C.K. McClatchy highschool where I played baseball and wrestled for all four years. Growing up in Sacramento I always enjoyed being outdoors, spending lots of my Summers at the river with friends. 
-                 This has carried over to my time in San Diego as well with my trying to stop by the beach whenever I get the free time for it.</p>
+                 This carried over to my time in San Diego as well with my trying to stop by the beach whenever I got the free time for it. Now I am pursuing a masters degree in Computer Science at UC Davis and am happy
+                 to get the opportunity to be close to home once again.
+                </p>
                 <picture id="selfPicture">
                     <img src="mainPicture.webp" alt="A picture of me">
                 </picture>
@@ -45,14 +47,14 @@
                 <p id="secondP" class="paragraphs"> When entering college at UC San Diego I had no real concept of what software engineering really was. In fact, most things relating to computers were somewhat of a mystery to me.
                     On a whim, I decided to take an intro to programming class at the end of my freshman year and I found that I really enjoyed it. From then on I was hooked, I knew that
                     software was what I wanted to do. I decided to pursue a degree in Mathematics-Computer Science the next quarter and now after two years, and tons of computer science classes,
-                    I'm now getting ready to graduate this Spring.
+                    I graduated with a degree in Mathematics-Computer Science in June 2023.
                 </p>
             </section>
             <br>
             <section>
                 <h3>My Interests</h3>
-                <p class="paragraphs"> Outside of my school life I enjoy staying active and going to the gym, or going to kickboxing practices. I also like taking advantage of my school's location and visiting the beach as often as possible, usually showing up around
-                    sunset and eating my dinner on the beach. Like most people I also love to play my fair share of video games, my favorite being Hollow Knight, and even joined the video game developement club at UCSD where I made some simple games using Unity.
+                <p class="paragraphs"> Outside of my school life I enjoy staying active and going to the gym, muay thai practices, or the baseball field with frineds. I also liked taking advantage of UC San Diego's location and visiting the beach as often as possible
+                    . Like most people I also love to play my fair share of video games, my favorite being Hollow Knight, and even joined the video game developement club at UCSD where I made some simple games using Unity.
 
                 </p>
             </section>
