Added media queries for images

--- a/education.html
+++ b/education.html
@@ -30,37 +30,38 @@
                  and contributing to my value as an employee. Below is a sample of some of the important classes I've taken while at UCSD (during which time
                  I managed to maintain a GPA of 3.85).</p>
             <div id="tableDiv">
-            <table id="table">
-                <caption>Classes Taken</caption>
-                <colgroup>
-                    <col span ="1"> <!-- style="background-color: khaki;"> -->
-                    <col>  <!-- style="background-color: deepskyblue" -->
-                </colgroup>
-                <tr>
-                    <th>CS classes</th>
-                    <th>Math Classes</th>
-                </tr>
-                <tr>
-                    <td>Advanced Data Structures</td>
-                    <td>Numerical Analysis</td>
-                </tr>
-                <tr>
-                    <td>Design of Algorithms</td>
-                    <td>Graph theory</td>
-                </tr>
-                <tr>
-                    <td>Operating Systems</td>
-                    <td>Statistical Methods</td>
-                </tr>
-                <tr>
-                    <td>Software Engineering</td>
-                    <td>Abstract Algebra</td>
-                </tr>
-                <tr>
-                    <td>Web Dev (client / server)</td>
-                    <td>Linear Numeric Optimization</td>
-                </tr>
-            </table>
+                <table id="table">
+                    <caption>Classes Taken</caption>
+                    <colgroup>
+                        <col span ="1"> <!-- style="background-color: khaki;"> -->
+                        <col>  <!-- style="background-color: deepskyblue" -->
+                    </colgroup>
+                    <tr>
+                        <th>CS classes</th>
+                        <th>Math Classes</th>
+                    </tr>
+                    <tr>
+                        <td>Advanced Data Structures</td>
+                        <td>Numerical Analysis</td>
+                    </tr>
+                    <tr>
+                        <td>Design of Algorithms</td>
+                        <td>Graph theory</td>
+                    </tr>
+                    <tr>
+                        <td>Operating Systems</td>
+                        <td>Statistical Methods</td>
+                    </tr>
+                    <tr>
+                        <td>Software Engineering</td>
+                        <td>Abstract Algebra</td>
+                    </tr>
+                    <tr>
+                        <td>Web Dev (client / server)</td>
+                        <td>Linear Numeric Optimization</td>
+                    </tr>
+                </table>
+            </div>
 	</div>
         </div>
         <br>
