--- a/spotifyProject/spotifyStuff.html
+++ b/spotifyProject/spotifyStuff.html
@@ -15,7 +15,7 @@
         <script>
           function redirectToLogin() {
             // Redirect the user to the /login endpoint on your Express app
-            window.location.href = '/login';
+            window.location.href = './login';
           }
         </script>
     </main>
