--- a/education.html
+++ b/education.html
@@ -72,7 +72,7 @@
     </main>
     <footer>
         <p id="author">Author: Tyler Culp</p>
-        <p>Contact: <a href="mailto:tculp@ucsd.edu">tculp@ucsd.edu</a></p>
+        <p>Contact: <a href="mailto:taculp@ucdavis.edu">tculp@ucsd.edu</a></p>
     </footer>
 </body>
 </html>
