--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- Note: CSS validation fails on most pages due to using lr when defining my grid space. I assume this is either
-            because there is a different variable that is preferred that does the same thing or that lr isn't defined on
-                whatever version of CSS that validator is using to check.-->
     <h1>Tyler Culp's Website</h1>
     <nav>
         <a href="index.html">About</a>
@@ -63,7 +60,7 @@
     </main>
     <footer>
         <p id="author">Author: Tyler Culp</p>
-        <p>Contact: <a href="mailto:tculp@ucsd.edu">tculp@ucsd.edu</a></p>
+        <p>Contact: <a href="mailto:taculp@ucdavis.edu">tculp@ucsd.edu</a></p>
     </footer>
 
 </body>
