--- a/projects.html
+++ b/projects.html
@@ -67,10 +67,12 @@
                         </figure>
                     </details>
                  </aside>
-            <li><p><b>Top Spotify Songs</b></p>
+            <li><p><b>Top Spotify Songs (<a href="https://github.com/Tyler-Culp/tylersweb.site/tree/main/spotifyProject">Link</a>)</b></p>
                 <p class="listP">This was a project I worked on last Summer where I attempted to make a Spotify web application that would allow a user to log into
                     their spotify account and then show what their top songs are for all time on the platform. It would also allow you to view main profile
-                    features like number of playlists or number of friends on the app.
+                    features like number of playlists or number of friends on the app. <a href="./spotifyStuff.html">Here</a> is the link to the log in page for the
+                    web app, although only authorized user on my spotify developer dashboard can access it unless I apply for a commercial api key from spotify. If you'd
+                    like to give it a test shoot me an email with your name and spotify email at the address below.
                 </p>
                 <aside>
                     <details>
@@ -108,7 +110,7 @@
     </main>
     <footer>
         <p id="author">Author: Tyler Culp</p>
-        <p>Contact: <a href="mailto:tculp@ucsd.edu">tculp@ucsd.edu</a></p>
+        <p>Contact: <a href="mailto:taculp@ucdavis.edu">tculp@ucsd.edu</a></p>
     </footer>
 </body>
 </html>
