--- a/education.html
+++ b/education.html
@@ -66,7 +66,7 @@
         </div>
         <br>
         <h3>Future Plans</h3>
-        <p id="thirdP">I am no attending UC Davis where I am pursuing a masters degree in Computer Science after graduating from UC San Diego in June 2023.
+        <p id="thirdP">I am now attending UC Davis where I am pursuing a masters degree in Computer Science after graduating from UC San Diego in June 2023.
         </p>
         <br>
     </main>
